Added notification bar

--- a/homepage.html
+++ b/homepage.html
@@ -1,15 +1,16 @@
 <html>
     <head>
         <title>Edward Seley</title>
-        <style type="text/css" src="main.css"></style>
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <ul>
-            <li><a href="homepage.html"></a></li>
-            <li><a href="about.html"></a></li>
-            <li><a href="projects.html"></a></li>
-            <li><a href="resume.pdf"></a></li>
-            <li><a href="contact.html"></a></li>
+        <ul class = "navigation">
+            <li><a id="home" href="homepage.html">Edward Seley</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="projects.html">projects</a></li>
+            <li><a href="resume.pdf">resume</a></li>
+            <li><a href="contact.html">contact</a></li>
         </ul>
+        <h1>My name is Edward Seley</h1>
     </body>
 </html>
