--- a/homepage.html
+++ b/homepage.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <ul class = "navigation">
-            <li><a id="home" href="homepage.html">Edward Seley</a></li>
+            <li id="home" ><a href="homepage.html">Edward Seley</a></li>
             <li><a href="about.html">about</a></li>
             <li><a href="projects.html">projects</a></li>
             <li><a href="resume.pdf">resume</a></li>
             <li><a href="contact.html">contact</a></li>
         </ul>
-        <h1>My name is Edward Seley</h1>
+        <h2>Welcome to my website</h2>
     </body>
 </html>
