--- a/homepage.html
+++ b/homepage.html
@@ -4,13 +4,20 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <ul class = "navigation">
-            <li id="home" ><a href="homepage.html">Edward Seley</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="projects.html">projects</a></li>
-            <li><a href="resume.pdf">resume</a></li>
-            <li><a href="contact.html">contact</a></li>
-        </ul>
-        <h2>Welcome to my website</h2>
+            <ul class = "navigation">
+                <li id="home" ><a href="homepage.html">Edward Seley</a></li>
+                <li><a href="contact.html">contact</a></li>
+                <li><a href="resume.pdf">resume</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="about.html">about</a></li>
+            </ul>
+        <div id="terminal">
+            <div id="window-bar">
+                <span id="terminal-title">Terminal</span>
+            </div>
+            <div class = "command">
+                root@ubuntu:~#
+            </div>
+        </div>
     </body>
 </html>
