--- a/homepage.html
+++ b/homepage.html
@@ -4,8 +4,15 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div id="navigation">☰</div>
+        <div>
+            <div id="navigation-button">☰</div>
+            <ul id="navigation-options">
+                <li><a>About</a></li>
+                <li><a>Projects</a></li>
+                <li><a>Resume</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </div>
         <div id="name" ><a href="homepage.html">Edward Seley</a></div>
-        <div class="blank"></div>
     </body>
 </html>
