Navigation updated with hover capabilities

--- a/homepage.html
+++ b/homepage.html
@@ -1,18 +1,19 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Edward Seley</title>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div>
-            <div id="navigation-button">☰</div>
-            <ul id="navigation-options">
+        <div id="name" ><a href="homepage.html">Edward Seley</a></div>
+        <nav>
+            <div id = "nav-button">☰</div>
+            <ul id = "nav-options">
                 <li><a>About</a></li>
                 <li><a>Projects</a></li>
                 <li><a>Resume</a></li>
                 <li><a>Contact</a></li>
             </ul>
-        </div>
-        <div id="name" ><a href="homepage.html">Edward Seley</a></div>
+        </nav>
     </body>
 </html>
