--- a/homepage.html
+++ b/homepage.html
@@ -11,9 +11,24 @@
             <ul id = "nav-options">
                 <li><a>About</a></li>
                 <li><a>Projects</a></li>
-                <li><a>Resume</a></li>
+                <li><a>Experience</a></li>
                 <li><a>Contact</a></li>
             </ul>
         </nav>
+        <div id="floral">
+            <div class = text-box>
+                <div id = intro>Hello, my name is </div>
+                <div id = "term"><b>Ed·ward Sel·ey</b></div>
+                <div id = "pronunciation"><i>/ĕd′wərd sē(ə)lē/</i></div>
+                <div id = "grammer"><i>pronoun</i></div>
+                <div id = "definition">1. A talented and passionate software developer who has a knack for problem solving and loves learning new things.</div>
+                <div id = "example">"Looking for a problem to be solved or a program to be written? I know just the man to do it: Edward Seley."</div>
+                <div id = "synonyms"><i>synonyms:</i> savy software engineer, soon-to-be master of the universe, the chosen one</div>
+            </div>
+        </div>
+        <div id = "black">
+        </div>
+        <div id="floral">
+        </div>
     </body>
 </html>
