--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,8 @@
         <script type="text/javascript" src="jquery.js"></script>
         <script>
             $(document).ready(function() {
+                $("#main-pic").hide("slide", { direction: "left" }, 1000);
+                $("#main-pic").show("slide", { direction: "right" }, 1000);
             $("#term").slideUp(1000).slideDown(1000);   
             });
         </script>
@@ -34,21 +36,71 @@
             </div>
             <img id= "main-pic" src="HomepagePic.png">
         </div>
-        <div id = "blackFooter">
+        <div id = "project-section">
             <h1>Projects I've Worked On</h1>
             <div id ="BrainApp">
                 <h2>The Brain App</h2>
                 <img id="project1" src="BrainApp.png">
                 <p class="text-box">
-                    This application serves as an interactive study guide through which one can come to learn more about the brain. There are four different areas of study that I plan to include in this app and they are: history of neuroscience, philosophy of the mind, neurobiology, and computational neuroscience. I used C++ and SDL libraries to complete this project. <a href="https://github.com/EdwardSeley/BrainApp">Click here to learn more</a>
-            </div>
-                
+                    This application serves as an interactive study guide through which one can come to learn more about the brain. There are four different areas of study that I have included in this app and they are: history of neuroscience, philosophy of the mind, neurobiology, and computational neuroscience. I used C++ and SDL libraries to complete this project.
+            </div>          
             <div id="HealthProgram">
                 <h2>Health Program</h2>
                 <img id="project2" src="HealthProgram.PNG">
                 <p class="text-box">
-                    This program helps the user measure calorie intake and food consumption. The Harris-Benedict algorithms for BMR and calorie levels are used, as well as a BMI formula from the CDC (Centers for Disease Control and Prevention) and the HAMWI formula for ideal body weight. Click here to learn more. <a href="https://github.com/EdwardSeley/Health-Program">Click here to learn more</a>
+                    This program helps users measure their calorie intake and food consumption. The Harris-Benedict algorithms for BMR and calorie levels are utilized, as well as a BMI formula from the CDC (Centers for Disease Control and Prevention) and the HAMWI formula for ideal body weight. I used Java and Netbeans to complete this project. 
+            </div>
+            <div id="AutoQuiz">
+                <h2>Auto Quiz</h2>
+                <img id="project3" src="AutomatedQuiz.PNG">
+                <p class="text-box">
+                    The AutoQuiz program uses Python, HTML, and CSS to generate and email a quiz based on random Latin vocabulary. I included a file with thousands of Latin words and definitions so that each quiz generation comes with new/unexpected words. There is also a terminal script that utilizes Crontab and Mutt to automatically send an email containing the quiz each day at a particular time.
                 </p>
+            </div>
+        </div>
+        <div id="experience-section">
+            <h1>Experience</h1>
+            <div id="timeline">
+                <div class="experience-descript" id="OneEarth">
+                    <h3 class="position">
+                        Web Designer and Marketing Assistant
+                    </h3>
+                    <h3 class="organization">
+                        One Earth Film Festival
+                    </h3>
+                    <p>Designed and developed website for One Earth Film Festival using Squarespace and some HTML and CSS injections. Pitched the website to Green Community Connections, the parent organization of One Earth, and aided in marketing the film festival to younger audiences.</p>
+                </div>
+                <div class="experience-descript" id="Ignatius">
+                    <h3 class="position">
+                        High School Student
+                    </h3>
+                    <h3 class="organization">
+                        Saint Ignatius College Prep
+                    </h3>
+                    <p>Throughout my junior and senior year, I was fortunate enough to be able to take classes such as Honors Java, AP Computer Science, and Honors Robotics at Saint Ignatius College Prep in Chicago. Graduated in 2017</p>
+                </div>
+                <div class="experience-descript" id="DUWeb">
+                    <h3 class="position">
+                        Web Services Advisor
+                    </h3>
+                    <h3 class="organization">
+                        Dominican University
+                    </h3>
+                    <p>
+                        I am currently working at Dominican University to assist with coding secure scripts (both client-side and server-side) and creating database-driven web projects, using standard technologies such as PHP, CSS, HTML, MySQL.
+                    </p>
+                </div>
+                <div class="experience-descript" id="CaseWesternStudent">
+                    <h3 class="position">
+                        College Student
+                    </h3>
+                    <h3 class="organization">
+                        Case Western Reserve University
+                    </h3>
+                    <p>
+                        This fall I will be attending Case Western Reserve University in Cleveland, Ohio. There I will studying Computer Science and specializing in Cognitive Science and Artificial Intelligence. Graduating in 2021. 
+                    </p>
+                </div>
             </div>
         </div>
     </body>
