Added contact section

--- a/homepage.html
+++ b/homepage.html
@@ -60,6 +60,8 @@
         </div>
         <div id="experience-section">
             <h1>Experience</h1>
+            <div id="blue-line">
+                </div>
             <div id="timeline">
                 <div class="experience-descript" id="OneEarth">
                     <h3 class="position">
@@ -67,6 +69,9 @@
                     </h3>
                     <h3 class="organization">
                         One Earth Film Festival
+                    </h3>
+                    <h3 class="year">
+                        Summer 2016
                     </h3>
                     <p>Designed and developed website for One Earth Film Festival using Squarespace and some HTML and CSS injections. Pitched the website to Green Community Connections, the parent organization of One Earth, and aided in marketing the film festival to younger audiences.</p>
                 </div>
@@ -77,6 +82,9 @@
                     <h3 class="organization">
                         Saint Ignatius College Prep
                     </h3>
+                    <h3 class="year">
+                        2013 - 2017
+                    </h3>
                     <p>Throughout my junior and senior year, I was fortunate enough to be able to take classes such as Honors Java, AP Computer Science, and Honors Robotics at Saint Ignatius College Prep in Chicago. Graduated in 2017</p>
                 </div>
                 <div class="experience-descript" id="DUWeb">
@@ -85,6 +93,9 @@
                     </h3>
                     <h3 class="organization">
                         Dominican University
+                    </h3>
+                    <h3 class="year">
+                        Summer 2017
                     </h3>
                     <p>
                         I am currently working at Dominican University to assist with coding secure scripts (both client-side and server-side) and creating database-driven web projects, using standard technologies such as PHP, CSS, HTML, MySQL.
@@ -97,11 +108,21 @@
                     <h3 class="organization">
                         Case Western Reserve University
                     </h3>
+                    <h3 class="year">
+                        2017 - 2021
+                    </h3>
                     <p>
                         This fall I will be attending Case Western Reserve University in Cleveland, Ohio. There I will studying Computer Science and specializing in Cognitive Science and Artificial Intelligence. Graduating in 2021. 
                     </p>
                 </div>
             </div>
+        </div>
+        <div id="contact">
+            <h1>Let's Get in Touch</h1>
+            <br>
+            <img class="icon" src="EmailIcon.png">
+            <img class="icon" src="GitHubIcon.png">
+            <img class="icon" src="LinkedInIcon.png">
         </div>
     </body>
 </html>
