Fixed repeating background and unaligned elements

--- a/homepage.html
+++ b/homepage.html
@@ -111,9 +111,11 @@
         <div id="contact-section">
             <h1>Let's Get in Touch</h1>
             <br>
-            <a href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" src="EmailIcon.png"></a>
-            <a href="https://github.com/EdwardSeley" target="_blank"><img class="icon" src="GitHubIcon.png"></a>
-            <a href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="LinkedInIcon.png"></a>
+            <div id="icon-row">
+                <a href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" src="EmailIcon.png"></a>
+                <a href="https://github.com/EdwardSeley" target="_blank"><img class="icon" src="GitHubIcon.png"></a>
+                <a href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="LinkedInIcon.png"></a>
+            <div>
         </div>
     </body>
 </html>
