--- a/index.html
+++ b/index.html
@@ -2,54 +2,83 @@
 <html>
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        <meta name="viewport" content="width = device-width, initial-scale = 1" />
         <title>Edward Seley</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div id="name" ><a href="homepage.html">Edward Seley</a></div>
-        <nav>
-            <div id = "nav-button">☰</div>
-            <ul id = "nav-options">
-                <li><a href="#project-section">Projects</a></li>
-                <li><a href="#experience-section">Experience</a></li>
-                <li><a href="assets/resume.pdf">Resume</a></li>
-                <li><a href="#contact-section">Contact</a></li>
-            </ul>
-        </nav>
-        <div id="mainContent">
-            <div class = text-box>
-                <div id = intro>Hello, my name is </div>
-                <div id = "term"><b>Ed·ward Sel·ey</b></div>
-                <div id = "pronunciation"><i>/ĕd′wərd sē(ə)lē/</i></div>
-                <div id = "grammer"><i>pronoun</i></div>
-                <div id = "definition">1. A software developer who will be attending Case Western in the coming fall to study Computer Science, specializing in Cognitive Science and Artificial Intelligence.</div>
-                <div id = "example">"Who's that weirdo always programming and listening to the Weeknd? Oh right it's Edward Seley."</div>
-                <div id = "synonyms"><i>synonyms:</i> Eddie, savy software engineer (nobody calls me that but they should start) </div>
+        <div id="nav-bar" class="container">
+            <div class="row">
+                <div class="col-sm-10">
+                    <div id="name">Edward Seley</div>
+                </div>
+                <div class="col-sm-2">
+                    <nav>
+                        <div id="nav-button">☰</div>
+                        <ul id="nav-options">
+                            <li><a href="#project-section">Projects</a></li>
+                            <li><a href="#experience-section">Experience</a></li>
+                            <li><a href="assets/resume.pdf">Resume</a></li>
+                            <li><a href="#contact-section">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <img id= "main-pic" src="assets/HomepagePic.png">
         </div>
-        <div id = "project-section">
+        <div class="container" id="mainContent">
+            <div class="row">
+                <div class="col-sm-4" class="text-box">
+                    <div id = intro>Hello, my name is </div>
+                    <div id = "term"><b>Ed·ward Sel·ey</b></div>
+                    <div id = "pronunciation"><i>/ĕd′wərd sē(ə)lē/</i></div>
+                    <div id = "grammer"><i>pronoun</i></div>
+                    <div id = "definition">1. A software developer who will be attending Case Western in the coming fall to study Computer Science, specializing in Cognitive Science and Artificial Intelligence.</div>
+                    <div id = "example">"Who's that weirdo always programming and listening to the Weeknd? Oh right it's Edward Seley."</div>
+                    <div id = "synonyms"><i>synonyms:</i> Eddie, savy software engineer (nobody calls me that but they should start) </div>
+                </div>
+                <div class="col-sm-8">
+                    <img id="main-pic" src="assets/HomepagePic.png">
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="project-section">
             <h1>Projects I've Worked On</h1>
-            <div id ="BrainApp">
-                <h2>The Brain App</h2>
-                <a href="https://github.com/EdwardSeley/BrainApp" target="_blank"><img id="project1" src="assets/BrainApp.png"></a>
-                <p class="text-box">
-                    This application serves as an interactive study guide through which one can come to learn more about the brain. There are four different areas of study that I have included in this app and they are: history of neuroscience, philosophy of the mind, neurobiology, and computational neuroscience. I used C++ and SDL libraries to complete this project.
-            </div>          
-            <div id="HealthProgram">
-                <h2>Health Program</h2>
-                <a href="https://github.com/EdwardSeley/Health-Program" target="_blank"><img id="project2" src="assets/HealthProgram.PNG"></a>
-                <p class="text-box">
-                    This program helps users measure their calorie intake and food consumption. The Harris-Benedict algorithms for BMR and calorie levels are utilized, as well as a BMI formula from the CDC (Centers for Disease Control and Prevention) and the HAMWI formula for ideal body weight. I used Java and Netbeans to complete this project. 
+            <div class="row" id="BrainApp">
+                <div class="col-sm-12">
+                    <h2>The Brain App</h2>
+                    <a href="https://github.com/EdwardSeley/BrainApp" target="_blank"><img id="project1" src="assets/BrainApp.png"></a>
+                </div>
+                <div class="col-sm-12">
+                    <p class="text-box">
+                        This application serves as an interactive study guide through which one can come to learn more about the brain. There are four different areas of study that I have included in this app and they are: history of neuroscience, philosophy of the mind, neurobiology, and computational neuroscience. I used C++ and SDL libraries to complete this project.
+                    </p>
+                </div>
             </div>
-            <div id="AutoQuiz">
-                <h2>Auto Quiz</h2>
-                <a href="https://github.com/EdwardSeley/AutoQuiz" target="_blank"><img id="project3" src="assets/AutomatedQuiz.PNG"></a>
-                <p class="text-box">
-                    The AutoQuiz program uses Python, HTML, and CSS to generate and email a quiz based on random Latin vocabulary. I included a file with thousands of Latin words and definitions so that each quiz generation comes with new/unexpected words. There is also a terminal script that utilizes Crontab and Mutt to automatically send an email containing the quiz each day at a particular time.
-                </p>
+            <div class="row" id="HealthProgram">
+                    <div class="col-sm-12">
+                        <h2>Health Program</h2>
+                        <a href="https://github.com/EdwardSeley/Health-Program" target="_blank"><img id="project2" src="assets/HealthProgram.PNG"></a>
+                    </div>
+                    <div class="col-sm-12">
+                        <p class="text-box">
+                            This program helps users measure their calorie intake and food consumption. The Harris-Benedict algorithms for BMR and calorie levels are utilized, as well as a BMI formula from the CDC (Centers for Disease Control and Prevention) and the HAMWI formula for ideal body weight. I used Java and Netbeans to complete this project.
+                        </p>
+                    </div>
+                </div>
+                <div class="row" id="AutoQuiz">
+                    <div class="col-sm-12">
+                        <h2>Auto Quiz</h2>
+                        <a href="https://github.com/EdwardSeley/AutoQuiz" target="_blank"><img id="project3" src="assets/AutomatedQuiz.PNG"></a>
+                    </div>
+                    <div class="col-sm-12">
+                        <p class="text-box">
+                            The AutoQuiz program uses Python, HTML, and CSS to generate and email a quiz based on random Latin vocabulary. I included a file with thousands of Latin words and definitions so that each quiz generation comes with new/unexpected words. There is also a terminal script that utilizes Crontab and Mutt to automatically send an email containing the quiz each day at a particular time.
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
         <div id="experience-section">
             <h1>Experience</h1>
             <div id="blue-line">
@@ -118,5 +147,6 @@
                 <a href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="assets/LinkedInIcon.png"></a>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </body>
 </html>
