--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
         <meta name="viewport" content="width = device-width, initial-scale = 1" />
         <title>Edward Seley</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div id="nav-bar" class="container">
-            <div class="row">
-                <div class="col-sm-10">
-                    <div id="name">Edward Seley</div>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="row">
+                    <div class="col-lg-11 text-center">
+                        <div id="name">Edward Seley</div>
+                    </div>
+                    <div class="col-lg-1">
+                        <nav>
+                            <div id="nav-button">☰</div>
+                            <ul id="nav-options">
+                                <li><a href="#project-section">Projects</a></li>
+                                <li><a href="#experience-section">Experience</a></li>
+                                <li><a href="assets/resume.pdf">Resume</a></li>
+                                <li><a href="#contact-section">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="col-sm-2">
-                    <nav>
-                        <div id="nav-button">☰</div>
-                        <ul id="nav-options">
-                            <li><a href="#project-section">Projects</a></li>
-                            <li><a href="#experience-section">Experience</a></li>
-                            <li><a href="assets/resume.pdf">Resume</a></li>
-                            <li><a href="#contact-section">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+            </nav>
         </div>
-        <div class="container" id="mainContent">
+        <div class="container-fluid" id="mainContent">
             <div class="row">
-                <div class="col-sm-4" class="text-box">
+                <div class="col-lg-8">
+                    <img id="main-pic" src="assets/HomepagePic.png">
+                </div>
+                <div class="col-lg-4 text-box">
                     <div id = intro>Hello, my name is </div>
                     <div id = "term"><b>Ed·ward Sel·ey</b></div>
                     <div id = "pronunciation"><i>/ĕd′wərd sē(ə)lē/</i></div>
@@ -37,114 +45,133 @@
                     <div id = "example">"Who's that weirdo always programming and listening to the Weeknd? Oh right it's Edward Seley."</div>
                     <div id = "synonyms"><i>synonyms:</i> Eddie, savy software engineer (nobody calls me that but they should start) </div>
                 </div>
-                <div class="col-sm-8">
-                    <img id="main-pic" src="assets/HomepagePic.png">
-                </div>
             </div>
         </div>
 
-        <div class="container" id="project-section">
+        <div class="container-fluid" id="project-section">
             <h1>Projects I've Worked On</h1>
             <div class="row" id="BrainApp">
-                <div class="col-sm-12">
+                <div class="col-lg-6 project-image">
                     <h2>The Brain App</h2>
-                    <a href="https://github.com/EdwardSeley/BrainApp" target="_blank"><img id="project1" src="assets/BrainApp.png"></a>
+                    <img id="project1" src="assets/BrainApp.png">
                 </div>
-                <div class="col-sm-12">
+                <div class="col-lg-6 project-text">
                     <p class="text-box">
                         This application serves as an interactive study guide through which one can come to learn more about the brain. There are four different areas of study that I have included in this app and they are: history of neuroscience, philosophy of the mind, neurobiology, and computational neuroscience. I used C++ and SDL libraries to complete this project.
                     </p>
                 </div>
             </div>
             <div class="row" id="HealthProgram">
-                    <div class="col-sm-12">
+                    <div class="col-lg-6 project-image">
                         <h2>Health Program</h2>
-                        <a href="https://github.com/EdwardSeley/Health-Program" target="_blank"><img id="project2" src="assets/HealthProgram.PNG"></a>
+                        <img id="project2" src="assets/HealthProgram.PNG"></img>
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-lg-6 project-text">
                         <p class="text-box">
                             This program helps users measure their calorie intake and food consumption. The Harris-Benedict algorithms for BMR and calorie levels are utilized, as well as a BMI formula from the CDC (Centers for Disease Control and Prevention) and the HAMWI formula for ideal body weight. I used Java and Netbeans to complete this project.
                         </p>
                     </div>
                 </div>
                 <div class="row" id="AutoQuiz">
-                    <div class="col-sm-12">
+                    <div class="col-lg-6 project-image">
                         <h2>Auto Quiz</h2>
-                        <a href="https://github.com/EdwardSeley/AutoQuiz" target="_blank"><img id="project3" src="assets/AutomatedQuiz.PNG"></a>
+                        <img id="project3" src="assets/AutomatedQuiz.PNG"></img>
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-lg-6 project-text">
                         <p class="text-box">
                             The AutoQuiz program uses Python, HTML, and CSS to generate and email a quiz based on random Latin vocabulary. I included a file with thousands of Latin words and definitions so that each quiz generation comes with new/unexpected words. There is also a terminal script that utilizes Crontab and Mutt to automatically send an email containing the quiz each day at a particular time.
                         </p>
                     </div>
                 </div>
             </div>
-        <div id="experience-section">
+        <div class="container-fluid" id="experience-section">
             <h1>Experience</h1>
-            <div id="blue-line">
-                </div>
             <div id="timeline">
-                <div class="experience-descript" id="OneEarth">
-                    <h3 class="position">
-                        Web Designer and Marketing Assistant
-                    </h3>
-                    <h3 class="organization">
-                        One Earth Film Festival
-                    </h3>
-                    <h3 class="year">
-                        Summer 2016
-                    </h3>
-                    <p>Designed and developed website for One Earth Film Festival using Squarespace and some HTML and CSS injections. Pitched the website to Green Community Connections, the parent organization of One Earth, and aided in marketing the film festival to younger audiences.</p>
+                <div class="row">
+                    <div class="col-lg-6" id="OneEarth">
+                        <div class=" experience-descript">
+                            <h3 class="position">
+                                Web Designer and Marketing Assistant
+                            </h3>
+                            <h3 class="organization">
+                                One Earth Film Festival
+                            </h3>
+                            <h3 class="year">
+                                Summer 2016
+                            </h3>
+                            <p>Designed and developed website for One Earth Film Festival using Squarespace and some HTML and CSS injections. Pitched the website to Green Community Connections, the parent organization of One Earth, and aided in marketing the film festival to younger audiences.</p>
+                        </div>     
+                    </div>
+                    <div class="col-lg-6 emptyspace">
+                    </div>
                 </div>
-                <div class="experience-descript" id="Ignatius">
-                    <h3 class="position">
-                        High School Student
-                    </h3>
-                    <h3 class="organization">
-                        Saint Ignatius College Prep
-                    </h3>
-                    <h3 class="year">
-                        2013 - 2017
-                    </h3>
-                    <p>Throughout my junior and senior year, I was fortunate enough to be able to take classes such as Honors Java, AP Computer Science, and Honors Robotics at Saint Ignatius College Prep in Chicago. Graduated in 2017</p>
+                <div class="row">
+                    <div class="col-lg-6 emptyspace">
+                    </div>
+                    <div class="col-lg-6" id="Ignatius">
+                        <div class="experience-descript">
+                            <h3 class="position">
+                                High School Student
+                            </h3>
+                            <h3 class="organization">
+                                Saint Ignatius College Prep
+                            </h3>
+                            <h3 class="year">
+                                2013 - 2017
+                            </h3>
+                            <p>Throughout my junior and senior year, I was fortunate enough to be able to take classes such as Honors Java, AP Computer Science, and Honors Robotics at Saint Ignatius College Prep in Chicago. Graduated in 2017</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="experience-descript" id="DUWeb">
-                    <h3 class="position">
-                        Web Services Advisor
-                    </h3>
-                    <h3 class="organization">
-                        Dominican University
-                    </h3>
-                    <h3 class="year">
-                        Summer 2017
-                    </h3>
-                    <p>
-                        I am currently working at Dominican University to assist with coding secure scripts (both client-side and server-side) and creating database-driven web projects, using standard technologies such as PHP, CSS, HTML, MySQL.
-                    </p>
+                <div class="row">
+                    <div class="col-lg-6" id="DUWeb">
+                        <div class="experience-descript">
+                            <h3 class="position">
+                                Web Services Advisor
+                            </h3>
+                            <h3 class="organization">
+                                Dominican University
+                            </h3>
+                            <h3 class="year">
+                                Summer 2017
+                            </h3>
+                            <p>
+                                I am currently working at Dominican University to assist with coding secure scripts (both client-side and server-side) and creating database-driven web projects, using standard technologies such as PHP, CSS, HTML, MySQL.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 emptyspace">
+                    </div>
                 </div>
-                <div class="experience-descript" id="CaseWesternStudent">
-                    <h3 class="position">
-                        College Student
-                    </h3>
-                    <h3 class="organization">
-                        Case Western Reserve University
-                    </h3>
-                    <h3 class="year">
-                        2017 - 2021
-                    </h3>
-                    <p>
-                        This fall I will be attending Case Western Reserve University in Cleveland, Ohio. There I will studying Computer Science and specializing in Cognitive Science and Artificial Intelligence. Graduating in 2021. 
-                    </p>
+                <div class="row">
+                    <div class="col-lg-6 emptyspace">
+                    </div>
+                    <div class="col-lg-6" id="CaseWesternStudent">
+                        <div class="experience-descript">
+                            <h3 class="position">
+                                College Student
+                            </h3>
+                            <h3 class="organization">
+                                Case Western Reserve University
+                            </h3>
+                            <h3 class="year">
+                                2017 - 2021
+                            </h3>
+                            <p>
+                                This fall I will be attending Case Western Reserve University in Cleveland, Ohio. There I will studying Computer Science and specializing in Cognitive Science and Artificial Intelligence. Graduating in 2021.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="contact-section">
+        <div class="container-fluid" id="contact-section">
             <h1>Let's Get in Touch</h1>
             <br>
-            <div id="icon-row">
-                <a href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" src="assets/EmailIcon.png"></a>
-                <a href="https://github.com/EdwardSeley" target="_blank"><img class="icon" src="assets/GitHubIcon.png"></a>
-                <a href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="assets/LinkedInIcon.png"></a>
+            <div class="row" id="icon-row">
+                <a class="col-lg-4" href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" src="assets/EmailIcon.png"></a>
+                <a class="col-lg-4" href="https://github.com/EdwardSeley" target="_blank"><img class="icon" src="assets/GitHubIcon.png"></a>
+                <a class="col-lg-4" href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="assets/LinkedInIcon.png"></a>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
