Finished Bootstrap integration

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width = device-width, initial-scale = 1" />
         <title>Edward Seley</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+        <script src="bootstrap/js/jquery-3.2.1.min"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-default" role="navigation">
+            <nav class="navbar navbar-default">
                 <div class="row">
                     <div class="col-lg-11 text-center">
                         <div id="name">Edward Seley</div>
@@ -34,7 +33,7 @@
         <div class="container-fluid" id="mainContent">
             <div class="row">
                 <div class="col-lg-8">
-                    <img id="main-pic" src="assets/HomepagePic.png">
+                    <img id="main-pic" alt="picture of me" src="assets/HomepagePic.png">
                 </div>
                 <div class="col-lg-4 text-box">
                     <div id = intro>Hello, my name is </div>
@@ -53,7 +52,7 @@
             <div class="row" id="BrainApp">
                 <div class="col-lg-6 project-image">
                     <h2>The Brain App</h2>
-                    <img id="project1" src="assets/BrainApp.png">
+                    <img id="project1" alt="Brain App Image" src="assets/BrainApp.png">
                 </div>
                 <div class="col-lg-6 project-text">
                     <p class="text-box">
@@ -64,7 +63,7 @@
             <div class="row" id="HealthProgram">
                     <div class="col-lg-6 project-image">
                         <h2>Health Program</h2>
-                        <img id="project2" src="assets/HealthProgram.PNG"></img>
+                        <img id="project2" alt="Health Program Image" src="assets/HealthProgram.PNG">
                     </div>
                     <div class="col-lg-6 project-text">
                         <p class="text-box">
@@ -75,7 +74,7 @@
                 <div class="row" id="AutoQuiz">
                     <div class="col-lg-6 project-image">
                         <h2>Auto Quiz</h2>
-                        <img id="project3" src="assets/AutomatedQuiz.PNG"></img>
+                        <img id="project3" alt="AutoQuiz Image" src="assets/AutomatedQuiz.PNG">
                     </div>
                     <div class="col-lg-6 project-text">
                         <p class="text-box">
@@ -169,9 +168,9 @@
             <h1>Let's Get in Touch</h1>
             <br>
             <div class="row" id="icon-row">
-                <a class="col-lg-4" href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" src="assets/EmailIcon.png"></a>
-                <a class="col-lg-4" href="https://github.com/EdwardSeley" target="_blank"><img class="icon" src="assets/GitHubIcon.png"></a>
-                <a class="col-lg-4" href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" src="assets/LinkedInIcon.png"></a>
+                <a class="col-lg-4" href="mailto:edwardseley@gmail.com" target="_blank"><img class="icon" alt="email" src="assets/EmailIcon.png"></a>
+                <a class="col-lg-4" href="https://github.com/EdwardSeley" target="_blank"><img class="icon" alt="github" src="assets/GitHubIcon.png"></a>
+                <a class="col-lg-4" href="https://www.linkedin.com/in/edward-seley-45a734123/" target="_blank"><img class="icon" alt="linkedin" src="assets/LinkedInIcon.png"></a>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
