--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="col-lg-1">
                         <nav>
                             <div id="nav-button">☰</div>
-                            <ul id="nav-options">
+                            <ul class="dropdown-menu" id="nav-options">
                                 <li><a href="#project-section">Projects</a></li>
                                 <li><a href="#experience-section">Experience</a></li>
                                 <li><a href="assets/resume.pdf">Resume</a></li>
